[package]
name = "arrive"
version = "0.3.0"
authors = ["Marcin Puc <tranzystorek.io@protonmail.com>"]
edition = "2021"
description = "A simple CLI tool for interacting with Advent of Code"
repository = "https://github.com/tranzystorekk/arrive"
license = "MIT"
keywords = ["advent", "aoc", "cli", "tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "arv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
dirs = "5.0"
eyre = "0.6"
minreq = { version = "2.11", features = ["https"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
yansi = { version = "1.0", features = ["detect-env", "detect-tty"] }
