[package]
name = "arrive"
version = "0.3.2"
authors = ["Marcin Puc <tranzystorek.io@protonmail.com>"]
edition = "2021"
description = "A simple CLI tool for interacting with Advent of Code"
repository = "https://github.com/tranzystorekk/arrive"
license = "MIT"
keywords = ["advent", "aoc", "cli", "tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "arv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "5.0"
eyre = "0.6"
html2text = "0.13.5"
minreq = { version = "2.12", features = ["https"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
yansi = { version = "1.0", features = ["detect-env", "detect-tty"] }

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
