[package]
name = "arrive"
version = "0.4.1"
edition = "2021"
description = "A simple CLI tool for interacting with Advent of Code"
repository = "https://github.com/tranzystorekk/arrive"
license = "MIT"
keywords = ["advent", "aoc", "cli", "tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "arv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0"
eyre = "0.6"
itertools = "0.14"
minreq = "2.14"
serde = { version = "1.0", features = ["derive"] }
tl = "0.7"
toml = "0.9"
yansi = { version = "1.0", features = ["detect-env", "detect-tty"] }

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

[features]
default = ["rustls-tls"]
native-tls = ["minreq/https-native"]
rustls-tls = ["minreq/https"]
